--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -128,6 +128,10 @@
 			"ERC_AUTH_ACCESS_DENIED": "Guest access is not allowed. Please sign in."
 		},
 		"WARNING": {
+			"PLEASE_ENTER": "Please enter ",
+			"YOUR_NAME": "Your name",
+			"AND": "and",
+			"MEETING_ID": "the Meeting ID",
 			"NO_NAME_OR_ID": "Please enter {{noName ? 'Your name' : ''}}{{noName && noId ? ' and ' : ''}}{{noId ? 'the Meeting ID' : ''}}"
 		},
 		"GUEST": "Guest",
